# synora

./: .gitattributes  .gitignore  ARCHITECTURE_DECISIONS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DEVELOPMENT_LOG.md  LICENSE  PROJECT_STATE.md  README.md  SECURITY.md
decisions/: ARCHITECTURE_DECISIONS.md
docs/: AI_CONTEXT.md  API_ERROR_CATALOG.md  API_SPEC.md  ARCHITECTURE.md  CARGO_DEPENDENCY_BASELINE_DRAFT.md  CLI_SMOKE_TESTS.md  DATABASE_DESIGN_DRAFT.md  DATA_MODEL.md  DESIGN_FREEZE_CHECKLIST.md  DOWNLOAD_CACHE_POLICY_DRAFT.md  DOWNLOAD_SOURCE_POLICY_DRAFT.md  Discovery_Scope_Decision_One_Pager.md  FEATURES.md  FINAL_ARCHITECTURE.md  HASH_AND_SIGNATURE_POLICY_DRAFT.md  JOB_OPERATIONS_PLAYBOOK.md  JOB_RETRY_POLICY_DRAFT.md  JOB_TYPES_DRAFT.md  PLUGIN_LIFECYCLE_SEQUENCE.md  PLUGIN_MANIFEST_SCHEMA.md  PLUGIN_PERMISSION_MATRIX.md  PLUGIN_SYSTEM.md  PRODUCT_SPEC.md  Push_Workflow_Standard.md  RELEASE_READINESS_CHECKLIST.md  SANDBOX_EXECUTION_POLICY_DRAFT.md  SECURITY_BASELINE_DRAFT.md  SOFTWARE_REPOSITORY_SYSTEM_DRAFT.md  TECH_STACK.md  (+15 more)
legacy/python/: pyproject.toml
legacy/python/synora/: __init__.py  __main__.py  cli.py  logging_utils.py  paths.py
legacy/python/synora/domain/: models.py  risk.py
legacy/python/synora/integration/: __init__.py  winget_client.py
legacy/python/synora/repository/: config_repository.py
legacy/python/synora/security/: guard.py
legacy/python/synora/service/: software_service.py  update_service.py
legacy/python/synora/worker/: task_engine.py
legacy/python/tests/: test_cli.py  test_security_guard.py
(+39 files in other folders)
