[package]
name = "synora"
version = "0.2.0"
edition = "2021"
description = "Synora placeholder baseline"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
